plugins {
    id 'java'
    id 'io.quarkus'
    id 'org.openapi.generator' version '7.10.0'
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-rest'
    implementation 'io.quarkus:quarkus-rest-jackson'
    implementation 'io.quarkus:quarkus-messaging-rabbitmq'
    implementation 'io.quarkus:quarkus-hibernate-orm-panache'
    implementation 'io.quarkus:quarkus-smallrye-health'
    implementation 'io.quarkus:quarkus-jdbc-postgresql'
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-micrometer'

    // OpenAPI / Swagger UI
    implementation 'io.quarkus:quarkus-smallrye-openapi'
    implementation 'io.swagger.core.v3:swagger-annotations:2.2.26'
    implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
    implementation 'jakarta.validation:jakarta.validation-api:3.1.0'

    // MapStruct
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    implementation 'org.mapstruct:mapstruct:1.6.3'

    testImplementation 'io.quarkus:quarkus-junit5'
}

group = 'br.com.iagoomes'
version = '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

// OpenAPI Generator configuration
def generatedSourcesDir = "${layout.buildDirectory.get()}/generated/openapi"

openApiGenerate {
    generatorName = "jaxrs-spec"
    inputSpec = "${project.rootDir}/src/main/resources/openapi.yml".toString()
    outputDir = generatedSourcesDir
    apiPackage = "br.com.iagoomes.api"
    modelPackage = "br.com.iagoomes.model"
    invokerPackage = "br.com.iagoomes.invoker"

    configOptions = [
            library: "quarkus",
            interfaceOnly: "true",
            returnResponse: "true",
            useTags: "true",
            dateLibrary: "java8",
            useJakartaEe: "true",
            generatePom: "false",
            sourceFolder: "src/main/java",  // Define o caminho correto do source
            useSwaggerAnnotations: "false",  // Disable deprecated Swagger 2.0 annotations
            prependFormOrBodyParameters: "true",
            generateMicroprofileOpenAPIAnnotations: "true",
    ]

    additionalProperties = [
            hideGenerationTimestamp: "true",
            additionalModelTypeAnnotations: "@io.quarkus.runtime.annotations.RegisterForReflection"
    ]
}

// Adiciona o código gerado ao sourceSets
sourceSets {
    main {
        java {
            srcDir "$generatedSourcesDir/src/main/java"
        }
    }
}

// Garante que a geração ocorra antes de processar os sources
tasks.named('compileJava') {
    dependsOn tasks.named('openApiGenerate')
}

tasks.named('processResources') {
    dependsOn tasks.named('openApiGenerate')
}

// Configuração do MapStruct para trabalhar com classes geradas
tasks.withType(JavaCompile).configureEach {
    options.annotationProcessorPath = configurations.annotationProcessor
}